Add some fictional content to the demo page

--- a/index.html
+++ b/index.html
@@ -1,12 +1,65 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>dev</title>
   </head>
-  <body style="margin: 0; background-color: #333; color: white">
-    <main>development</main>
+  <body
+    style="
+      margin: 0;
+      padding: 1em 3em;
+      background-color: #333;
+      color: white;
+      font-size: 18px;
+    "
+  >
+    <main>
+      <h1>App Title</h1>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed et ex dui.
+        Donec eu dui sed massa auctor rhoncus. Nunc mollis, metus nec
+        sollicitudin ultricies, nibh diam accumsan eros, sit amet efficitur
+        lectus dui sit amet dolor. Donec commodo velit id nibh pharetra, at
+        fermentum velit mollis. Duis eu libero varius, ullamcorper tortor id,
+        pharetra neque. Nulla a pretium est. Sed imperdiet ultrices volutpat.
+        Sed quam arcu, aliquam eget diam et, pretium sagittis risus. Donec
+        finibus sapien id orci sollicitudin gravida. Vivamus et dui faucibus,
+        blandit nisl vitae, consectetur risus. Pellentesque vehicula dignissim
+        maximus. Donec pellentesque, sapien id sollicitudin bibendum, est magna
+        pretium ex, nec dignissim quam ante at mauris. Quisque sed scelerisque
+        nulla. Vestibulum lobortis orci vitae gravida posuere. Integer sed sem
+        diam. Maecenas bibendum ligula non metus faucibus, vitae pellentesque
+        nisi condimentum. Suspendisse vehicula ullamcorper nisi, ut rutrum dolor
+        mollis sit amet. Cras sit amet mi sit amet eros convallis pulvinar.
+        Donec condimentum condimentum tincidunt.
+      </p>
+
+      <p>
+        Suspendisse eu ipsum vel lorem congue mattis in at neque. Phasellus nec
+        felis sit amet nibh bibendum tristique a quis urna. Pellentesque laoreet
+        porta libero eget pellentesque. Praesent tempor, nisi et efficitur
+        cursus, leo nunc ullamcorper ante, quis eleifend velit justo sed enim.
+        Maecenas laoreet dictum lorem rhoncus tempus. Integer ipsum augue,
+        sagittis a facilisis et, mollis ut ipsum. Proin elementum consectetur
+        tincidunt.
+      </p>
+
+      <p>
+        Mauris nec mi et quam semper volutpat. Morbi suscipit felis lectus, in
+        ornare purus pretium in. Maecenas et ex metus. Ut aliquam, felis vel
+        mollis dapibus, tellus velit blandit dui, eu hendrerit tellus magna at
+        eros. Donec scelerisque hendrerit auctor. Aenean aliquet sapien
+        elementum dui sagittis eleifend. Donec hendrerit odio et dui lacinia
+        aliquet. Morbi auctor ultrices dui fringilla elementum. Curabitur
+        scelerisque lorem vitae placerat vulputate. Donec vestibulum urna sem,
+        at sodales ligula laoreet id. Etiam vehicula, lorem id tincidunt
+        sodales, sem odio vehicula ex, vel condimentum quam augue id augue.
+        Integer a varius nunc. Mauris rhoncus leo sed facilisis bibendum. Nullam
+        consectetur pellentesque vestibulum. Cras hendrerit feugiat orci, in
+        molestie risus rutrum ut. Proin dictum nunc at rutrum vehicula.
+      </p>
+    </main>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
